# gscore-svn

branches/0.0.9/: COPYING  TODO  (+4 more)
branches/0.0.9/glade/: Makefile.am  Makefile.in  gscore.glade  spcg_amd_sbd.xpm  spcg_bl_sab.xpm  spcg_tmp.xpm  tb_noarticulation.xpm  tb_paren.xpm  tb_staccatissimo.xpm  tb_stemup.xpm  treble_D_flat.xpm  treble_D_sharp.xpm  treble_F_flat.xpm  treble_G_sharp.xpm  treble_empty.xpm
branches/gscore-0.0.9/libgscore/: Makefile.am  gscore-staff.h
branches/gscore-0.0.9/libgscore/scorewidget/: scorewidget.c  scorewidget.h
trunk/: AUTHORS  ChangeLog  INSTALL  Makefile.am  README  SConstruct  TODO  VERSION  autogen.sh  configure.ac
trunk/documentation/hackers/: TODO  TODO.1  TODO.5  TODO.6
trunk/fonts/: Makefile  Makefile.am  Makefile.in  README
trunk/glade/: SConscript  alla_breve.xpm  gilbert.xpm  gscore.glade  score-ui.glade  spcg_ac_sbaon.xpm  spcg_bl_flt.xpm  spcg_co_staff.xpm  spcg_ks_sbks.xpm  spcg_m_xpsfm.xpm  spcg_t_xpfm.xpm  tb_barline_closerepeat.xpm  tb_doublesharp.xpm  tb_eighth.xpm  tb_flat.xpm  tb_marcato.xpm  tb_mezzoforte.xpm  tb_natural.xpm  tb_pianississimo.xpm  tb_tenuto.xpm  tb_wholerest.xpm  treble_B_flat.xpm  treble_C_flat.xpm  treble_F_sharp.xpm
trunk/libgscore/: Makefile.am  Makefile.in  constants.h  datastructures.h  gscore-error.h  gscore-object.h  gscoreerrors.h  gscoretypes.h  libgscore.h  libgscore.pc.in
trunk/libgscore/scorewidget/: AUTHORS  README  gdkcairo.c  gdkcairo.h  scorewidget.c  scorewidget.h
trunk/libgscore/tests/: .cvsignore  Makefile  demo.c
trunk/libgscore/tests/.deps/: demo.Po
trunk/libgscore/tests/.libs/: demo  lt-demo
trunk/libgscorebase/: Makefile.am  Makefile.in  display.c  display.h  gscore-font-constants.h  identity.c  identity.h  object-color.c  object-color.h  object.c  object.h  object_color.c  object_color.h  score.c  score.h  selection-area.c  selection-area.h  selection.c  staff.c  staff.h
trunk/libgscorespacings/: Makefile.am  spacings.c  spacings.h
trunk/libgscorewidgets/: Makefile.am
trunk/mode/: abc.gm
trunk/pixmaps/: Makefile  Makefile.am  Makefile.in  SConscript  accidentals-2bis.xpm  accidentals-2bis2.xpm  accidentals-rightparent.xpm  accidentals0.xpm  accordion-accDiscant.xpm  accordion-accFreebase.xpm  accordion-accStdbase.xpm  bass_B_sharp.xpm  bass_C_flat.xpm  bass_D_sharp.xpm  bass_E_flat.xpm  bass_F_flat.xpm  bass_F_sharp.xpm  bass_G_flat.xpm  bass_G_sharp.xpm  clefs-G.xpm  clefs-percussion.xpm  clefs-percussion_change.xpm  clefs-tab.xpm  eight.xpm  end_staff.xpm  five.xpm  flags-d6.xpm  flags-dgrace.xpm  flags-u4.xpm  flags-u5.xpm  flags-u6.xpm  goto_measure.xpm  nine.xpm  noteheads-0.xpm  noteheads-0cross.xpm  noteheads-0triangle.xpm  noteheads-1.xpm  noteheads-1slash.xpm  noteheads-1triangle.xpm  noteheads-2cross.xpm  (+90 more)
trunk/plugins/: Makefile.am  SConscript
trunk/plugins/abc/: Makefile  Makefile.am  Makefile.in  SConscript  abc.c  abc.h  export-abc.c  import-abc.c  import-abc.h
trunk/plugins/abc/.deps/: abc.Plo  export-abc.Plo  import-abc.Plo
trunk/plugins/abc/.libs/: abc.lai
trunk/plugins/abc/abcp-0.1a/CVS/: Repository
trunk/plugins/abc/abcp-0.1a/abcplib/: config  config.bat
trunk/plugins/abc/abcp-0.1a/abcplib/CVS/: Entries.Extra  Repository  Root
trunk/plugins/abc/abcp-0.1a/abcplib/conf/: lcc.cfg  linux.cfg  mingw.cfg  perfect.mkf  semantic.cache  src.mkf
trunk/plugins/abc/abcp-0.1a/abcplib/doc/: TODO  syn.txt
trunk/plugins/abc/abcp-0.1a/abcplib/pas/: abcp.dcu  abcp.pas  abcp_test.dcu  abcp_test.dfm  abcp_test.pas  abcptest.cfg  abcptest.dof  abcptest.dpr
trunk/plugins/abc/abcp-0.1a/abcplib/perfect/: Makefile  Text3  _Makefile  hhlist  hlist  hlist.c  lookupa.c  perfect  perfect.c  phash.c  standard.h
trunk/plugins/abc/abcp-0.1a/abcplib/src/: Copia di abcpkey.re  Makefile  TAGS  _Makefile  abcp.c  abcp.h  abcpbar.c  abcpbar.re  abcpdecor.c  abcpextf.c  abcpkey.c  abcpkey.re  abcpmeter.c  abcpmeter.re  abcpnote.c  abcpnote.re  abcpscan.c  abcpscan.re  abcpslurs.c  abcptempo.c  abcptempo.re  abcptext.c  errs.txt  garbage.c  incipit.c  incipit.lua  makep.bat  makep.sh  maker.bat  maker.sh  rats.c  semantic.cache
trunk/plugins/abc/abcp-0.1a/abcplib/testfiles/: Ave_Maria_Palestrina.abp  atte1.abc  b1.abc  bfly_testsuite.abc  hnair0.abc  hnr6.abc  hnwaltz0.abc  hudson1.abc  t.txt  t0.abc  t1.abc  t10.abc  t2.abc  t3.abc  t4.abc  t5.abc  t6.abc  t7.abc  t8.abc  t9.abc  test1.lua
trunk/plugins/abc/abcp-0.1a/debian/: abcp.doc-base.EX  changelog  control  cron.d.ex  files  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  semantic.cache  shlibs.local.ex
trunk/plugins/guido/: guido.c
trunk/plugins/midi/: Makefile  Makefile.am  midi-constants.h  midi-export.h  midi.c
trunk/plugins/musicxml/: Makefile  export-musicxml.h  musicxml.c
trunk/plugins/niff/: niff.c
trunk/plugins/simple/: Makefile  simple.c
trunk/po/: Makefile  POTFILES.in
trunk/samples/abc/: boite-musique.abc  boite-musique.ps  pitch.abc
trunk/src/: Makefile.am  Makefile.in  SConscript  articulation.c  beam.c  chords.c  common.c  create_score.c  debug.c  display.c  draw.c  draw_barline.c  draw_key.c  draw_key_signature.c  draw_note.c  draw_note_rest.c  draw_pitch_cursor.c  draw_staff.c  draw_time_signature.c  edit.c  error.c  file.c  glade.c  help.c  insert.c  key_cursor.c  key_event.c  layout-engine.c  libglade-garbage.c  macros.h  main.c  mode.c  mouse_event.c  notes.c  objects.c  objects_callbacks.c  pitch_cursor.c  plugin-conversions.c  plugin.c  position.c  (+13 more)
trunk/src/include/: articulation.h  beam.h  chords.h  common.h  constants.h  create_score.h  debug.h  display.h  draw.h  draw_barline.h  draw_key.h  draw_note.h  draw_note_rest.h  draw_pitch_cursor.h  draw_staff.h  draw_time_signature.h  file.h  glade.h  gscore-font-constants.h  gscore.h  help.h  importtab.h  insert.h  key_cursor.h  key_event.h  layout-engine.h  libglade-garbage.h  macros.h  mouse_event.h  notes.h  objects.h  objects_callbacks.h  plugin-conversions.h  plugin-structure.h  plugin.h  position.h  realize_area.h  rests.h  score-window.h  score.h  (+7 more)
(+240 files in other folders)
