pixmapsfiles = \
	accidentals-1.xpm \
	accidentals-1bis.xpm \
	accidentals-2bis.xpm \
	accidentals-2bis2.xpm \
	accidentals-leftparen.xpm \
	accidentals-rightparent.xpm \
	accidentals0.xpm \
	accordion-accBB.xpm \
	accordion-accBayanbase.xpm \
	accordion-accDiscant.xpm \
	accordion-accDot.xpm \
	accordion-accFreebase.xpm \
	accordion-accOldEE.xpm \
	accordion-accOldEES.xpm \
	accordion-accSB.xpm \
	accordion-accStdbase.xpm \
	alla_breve.xpm \
	bass_empty.xpm \
	bass_A_sharp.xpm \
	bass_A_flat.xpm \
	bass_B_flat.xpm \
	bass_B_sharp.xpm \
	bass_C_sharp.xpm \
	bass_C_flat.xpm \
	bass_D_sharp.xpm \
	bass_D_flat.xpm \
	bass_E_sharp.xpm \
	bass_E_flat.xpm \
	bass_F_sharp.xpm \
	bass_F_flat.xpm \
	bass_G_sharp.xpm \
	bass_G_flat.xpm \
	clefs-C.xpm \
	clefs-C_change.xpm \
	clefs-F.xpm \
	clefs-F_change.xpm \
	clefs-G.svg \
	clefs-G.xpm \
	clefs-G_change.xpm \
	clefs-percussion.xpm \
	clefs-percussion_change.xpm \
	clefs-tab.xpm \
	clefs-tab_change.xpm \
	common_time.xpm \
	dots-dot.xpm \
	eight.xpm \
	end_staff.xpm \
	five.xpm \
	flags-d3.xpm \
	flags-d4.xpm \
	flags-d5.xpm \
	flags-d6.xpm \
	flags-dgrace.xpm \
	flags-dstem.xpm \
	flags-stem.xpm \
	flags-u3.xpm \
	flags-u4.xpm \
	flags-u5.xpm \
	flags-u6.xpm \
	flags-ugrace.xpm \
	four.xpm \
	gilbert.jpg \
	gilbert.png \
	gilbert.xpm \
	goto_measure.xpm \
	gscore-icon.jpg \
	gscore.jpg \
	gscore.png \
	gscore.xpm \
	nine.xpm \
	noteheads-0.xpm \
	noteheads-0cross.xpm \
	noteheads-0diamond.xpm \
	noteheads-0slash.xpm \
	noteheads-0triangle.xpm \
	noteheads-1.xpm \
	noteheads-1bis.xpm \
	noteheads-1cross.xpm \
	noteheads-1diamond.xpm \
	noteheads-1slash.xpm \
	noteheads-1triangle.xpm \
	noteheads-2.xpm \
	noteheads-2cross.xpm \
	noteheads-2diamond.xpm \
	noteheads-2slash.xpm \
	noteheads-2triangle.xpm \
	noteheads-2xcircle.xpm \
	noteheads-ledgerending.xpm \
	noteheads2.xpm \
	one.xpm \
	p_24.xpm \
	p_34.xpm \
	p_44.xpm \
	p_68.xpm \
	pedal-..xpm \
	pedal-.xpm \
	pedal-P.xpm \
	pedal-Ped.xpm \
	pedal-d.xpm \
	pedal-e.xpm \
	reduced_staff.xpm \
	rests-0.xpm \
	rests-0neo_mensural.xpm \
	rests-1.xpm \
	rests-1bis.xpm \
	rests-1neo_mensural.xpm \
	rests-1neo_mensuralbis.xpm \
	rests-1neo_mensuralbis2.xpm \
	rests-1o.xpm \
	rests-2.xpm \
	rests-2bis.xpm \
	rests-2classical.xpm \
	rests-2neo_mensural.xpm \
	rests-2neo_mensuralbis.xpm \
	rests-3.xpm \
	rests-3bis.xpm \
	rests-3neo_mensural.xpm \
	rests-4.xpm \
	rests-5.xpm \
	rests-6.xpm \
	rests-7.xpm \
	rests-Oo.xpm \
	scripts-arpeggio-arrow-1.xpm \
	scripts-arpeggio-arrow-l.xpm \
	scripts-arpeggio.xpm \
	scripts-coda.xpm \
	scripts-dfermata.xpm \
	scripts-dmarcato.xpm \
	scripts-downbow.xpm \
	scripts-downmordent.xpm \
	scripts-downprall.xpm \
	scripts-dpedalheel.xpm \
	scripts-dpedaltoe.xpm \
	scripts-dportato.xpm \
	scripts-dstaccatissimo.xpm \
	scripts-flageolet.xpm \
	scripts-lcomma.xpm \
	scripts-lineprall.xpm \
	scripts-mordent.xpm \
	scripts-open.xpm \
	scripts-prall.xpm \
	scripts-prallmordent.xpm \
	scripts-prallprall.xpm \
	scripts-prallup.xpm \
	scripts-rcomma.xpm \
	scripts-reverseturn.xpm \
	scripts-segno.xpm \
	scripts-sforzato.xpm \
	scripts-staccato.xpm \
	scripts-stopped.xpm \
	scripts-tenuto.xpm \
	scripts-thumb.xpm \
	scripts-trilelement.xpm \
	scripts-trill-element.xpm \
	scripts-trill.xpm \
	scripts-turn.xpm \
	scripts-ufermata.xpm \
	scripts-umarcato.xpm \
	scripts-upbow.xpm \
	scripts-upedalheel.xpm \
	scripts-upedaltoe.xpm \
	scripts-upmordent.xpm \
	scripts-uportato.xpm \
	scripts-upprall.xpm \
	scripts-ustaccatissimo.xpm \
	scripts.pralldown.xpm \
	seven.xpm \
	six.xpm \
	solfa-0do.xpm \
	solfa-0fa.xpm \
	solfa-0la.xpm \
	solfa-0me.xpm \
	solfa-0te.xpm \
	solfa-1do.xpm \
	solfa-1fad.xpm \
	solfa-1fau.xpm \
	solfa-1la.xpm \
	solfa-1me.xpm \
	solfa-1re.xpm \
	solfa-1te.xpm \
	solfa-2do.xpm \
	solfa-2fad.xpm \
	solfa-2fau.xpm \
	solfa-2la.xpm \
	solfa-2me.xpm \
	solfa-2ro.xpm \
	solfa-2te.xpm \
	solfa-Ore.xpm \
	spcg_ac_sbaan.xpm \
	spcg_ac_sbaon.xpm \
	spcg_ac_swmca.xpm \
	spcg_amd_sbd.xpm \
	spcg_amd_sbdan.xpm \
	spcg_amd_vaod.xpm \
	spcg_bl_flt.xpm \
	spcg_bl_hlt.xpm \
	spcg_bl_sab.xpm \
	spcg_bl_sbd.xpm \
	spcg_bl_sbhatl.xpm \
	spcg_bl_sblad.xpm \
	spcg_bl_swdb.xpm \
	spcg_bm_bt.xpm \
	spcg_cl_sa.xpm \
	spcg_cl_sb.xpm \
	spcg_co_barline.xpm \
	spcg_co_clef.xpm \
	spcg_co_staff.xpm \
	spcg_ks_saks.xpm \
	spcg_ks_sbksa.xpm \
	spcg_m_slbm.xpm \
	spcg_m_xpsfm.xpm \
	spcg_m_ypsfm.xpm \
	spcg_t_xpfm.xpm \
	spcg_t_ypfm.xpm \
	spcg_ts_sats.xpm \
	stock-barline_closerepeat.png \
	stock-barline_double.png \
	stock-barline_opencloserepeat.png \
	stock-barline_openrepeat.png \
	stock-barline_single.png \
	stock-eighth.png \
	stock-key.png \
	stock-key_change.png \
	stock-key_signature.png \
	stock-key_signature_change.png \
	stock-quarter.png \
	stock-tempo.png \
	stock-time_signature.png \
	stock-time_signature_change.png \
	tb_accent.xpm \
	tb_augmentationdot.xpm \
	tb_autoupdown.xpm \
	tb_barline_closerepeat.xpm \
	tb_barline_double.xpm \
	tb_barline_opencloserepeat.xpm \
	tb_barline_openrepeat.xpm \
	tb_barline_single.xpm \
	tb_beam.xpm \
	tb_cursor.xpm \
	tb_doubleflat.xpm \
	tb_doublesharp.xpm \
	tb_doublewhole.xpm \
	tb_doublewholerest.xpm \
	tb_eighth.xpm \
	tb_eighthrest.xpm \
	tb_flat.xpm \
	tb_forte.xpm \
	tb_fortissimo.xpm \
	tb_fortississimo.xpm \
	tb_half.xpm \
	tb_halfrest.xpm \
	tb_marcato.xpm \
	tb_marcato2.xpm \
	tb_mezzoforte.xpm \
	tb_mezzopiano.xpm \
	tb_natural.xpm \
	tb_noarticulation.xpm \
	tb_paren.xpm \
	tb_pianissimo.xpm \
	tb_pianississimo.xpm \
	tb_pianissississimo.xpm \
	tb_piano.xpm \
	tb_quarter.xpm \
	tb_quarterrest.xpm \
	tb_sharp.xpm \
	tb_sixteenth.xpm \
	tb_sixteenthrest.xpm \
	tb_sixtyfourth.xpm \
	tb_sixtyfourthrest.xpm \
	tb_staccatissimo.xpm \
	tb_staccato.xpm \
	tb_stemdown.xpm \
	tb_stemup.xpm \
	tb_tenuto.xpm \
	tb_thirtysecond.xpm \
	tb_thirtysecondrest.xpm \
	tb_tie.xpm \
	tb_whole.xpm \
	tb_wholerest.xpm \
	three.xpm \
	time_common.xpm \
	treble_A_flat.xpm \
	treble_A_sharp.xpm \
	treble_B_flat.xpm \
	treble_B_sharp.xpm \
	treble_C_flat.xpm \
	treble_C_sharp.xpm \
	treble_D_flat.xpm \
	treble_D_sharp.xpm \
	treble_E_flat.xpm \
	treble_E_sharp.xpm \
	treble_F_flat.xpm \
	treble_F_sharp.xpm \
	treble_G_flat.xpm \
	treble_G_sharp.xpm \
	treble_empty.xpm \
	two.xpm \
	zero.xpm

pixmapsdir = $(datadir)/@PACKAGE@/pixmaps
pixmaps_DATA = $(pixmapsfiles)

EXTRA_DIST = $(pixmapsfiles)
