gladefiles = \
	gscore.glade \
	 \
	alla_breve.xpm \
	clefs-C.xpm \
	clefs-F.xpm \
	clefs-G.xpm \
	clefs-tab.xpm \
	common_time.xpm \
	gilbert.xpm \
	goto_measure.xpm \
	gscore.xpm \
	p_24.xpm \
	p_34.xpm \
	p_44.xpm \
	p_68.xpm \
	spcg_ac_sbaan.xpm \
	spcg_ac_sbaon.xpm \
	spcg_ac_swmca.xpm \
	spcg_amd_sbdan.xpm \
	spcg_amd_sbd.xpm \
	spcg_amd_vaod.xpm \
	spcg_bl_flt.xpm \
	spcg_bl_hlt.xpm \
	spcg_bl_sab.xpm \
	spcg_bl_sbd.xpm \
	spcg_bl_sbhatl.xpm \
	spcg_bl_sblad.xpm \
	spcg_bl_swdb.xpm \
	spcg_bl_tlt.xpm \
	spcg_bm_bt.xpm \
	spcg_cl_sa.xpm \
	spcg_cl_sb.xpm \
	spcg_co_barline.xpm \
	spcg_co_clef.xpm \
	spcg_co_staff.xpm \
	spcg_ks_saks.xpm \
	spcg_ks_sbksa.xpm \
	spcg_ks_sbks.xpm \
	spcg_m_slbm.xpm \
	spcg_m_xpsfm.xpm \
	spcg_m_ypsfm.xpm \
	spcg_tmp.xpm \
	spcg_ts_sats.xpm \
	spcg_t_xpfm.xpm \
	spcg_t_ypfm.xpm \
	stock-barline_single.png \
	stock-key_change.png \
	stock-key.png \
	stock-key_signature_change.png \
	stock-key_signature.png \
	stock-tempo.png \
	stock-time_signature_change.png \
	stock-time_signature.png \
	tb_accent.xpm \
	tb_augmentationdot.xpm \
	tb_autoupdown.xpm \
	tb_barline_closerepeat.xpm \
	tb_barline_double.xpm \
	tb_barline_opencloserepeat.xpm \
	tb_barline_openrepeat.xpm \
	tb_barline_single.xpm \
	tb_beam.xpm \
	tb_cursor.xpm \
	tb_doubleflat.xpm \
	tb_doublesharp.xpm \
	tb_doublewholerest.xpm \
	tb_doublewhole.xpm \
	tb_eighthrest.xpm \
	tb_eighth.xpm \
	tb_flat.xpm \
	tb_forte.xpm \
	tb_fortissimo.xpm \
	tb_fortississimo.xpm \
	tb_halfrest.xpm \
	tb_half.xpm \
	tb_marcato2.xpm \
	tb_marcato.xpm \
	tb_mezzoforte.xpm \
	tb_mezzopiano.xpm \
	tb_natural.xpm \
	tb_noarticulation.xpm \
	tb_paren.xpm \
	tb_pianissimo.xpm \
	tb_pianississimo.xpm \
	tb_pianissississimo.xpm \
	tb_piano.xpm \
	tb_quarterrest.xpm \
	tb_quarter.xpm \
	tb_sharp.xpm \
	tb_sixteenthrest.xpm \
	tb_sixteenth.xpm \
	tb_sixtyfourthrest.xpm \
	tb_sixtyfourth.xpm \
	tb_staccatissimo.xpm \
	tb_staccato.xpm \
	tb_stemdown.xpm \
	tb_stemup.xpm \
	tb_tenuto.xpm \
	tb_thirtysecondrest.xpm \
	tb_thirtysecond.xpm \
	tb_tie.xpm \
	tb_wholerest.xpm \
	tb_whole.xpm \
	time_common.xpm \
	treble_A_flat.xpm \
	treble_A_sharp.xpm \
	treble_B_flat.xpm \
	treble_B_sharp.xpm \
	treble_C_flat.xpm \
	treble_C_sharp.xpm \
	treble_D_flat.xpm \
	treble_D_sharp.xpm \
	treble_E_flat.xpm \
	treble_empty.xpm \
	treble_E_sharp.xpm \
	treble_F_flat.xpm \
	treble_F_sharp.xpm \
	treble_G_flat.xpm \
	treble_G_sharp.xpm

gladedir = $(datadir)/@PACKAGE@/glade
glade_DATA = $(gladefiles)

EXTRA_DIST = $(gladefiles)
